--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,14 @@ pycrypto==2.6.1
 tls-client==1.0.0
 fake-useragent==1.4.0
 
+# Ultra Bypass Packages
+selenium==4.15.2
+undetected-chromedriver==3.5.4
+playwright==1.40.0
+requests-html==0.10.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
+
 # Optional: FFmpeg Python wrapper (if needed)
 # ffmpeg-python==0.2.0
 
