--- a/requirements.txt
+++ b/requirements.txt
@@ -31,34 +31,24 @@ colorama==0.4.6
 # FFmpeg for Railway (alternative)
 ffmpeg-python==0.2.0
 
-# YouTube Bypass Packages
+# YouTube Bypass Packages (Railway Compatible)
 cryptography==41.0.7
 certifi==2023.11.17
 urllib3==2.1.0
 websockets==12.0
 
-# Additional YouTube Support
+# Additional YouTube Support (Railway Compatible)
 pycryptodome==3.19.0
-pycrypto==2.6.1
 
-# Network and Security
-tls-client==1.0.0
+# Network and Security (Railway Compatible)
 fake-useragent==1.4.0
 
-# Ultra Bypass Packages
-selenium==4.15.2
-undetected-chromedriver==3.5.4
-playwright==1.40.0
-requests-html==0.10.0
+# Ultra Bypass Packages (Railway Compatible)
 beautifulsoup4==4.12.2
 lxml==4.9.3
 
-# Revolutionary Bypass Packages
+# Revolutionary Bypass Packages (Railway Compatible)
 cloudscraper==1.2.71
-curl-cffi==0.5.10
-httpx-socks==0.8.4
-pycurl==7.45.2
-urllib3[socks]==2.1.0
 
 # Optional: FFmpeg Python wrapper (if needed)
 # ffmpeg-python==0.2.0
